# sudoku

./: .clang-format  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/benchmark/: CMakeLists.txt  benchmark.cpp
src/common/: CMakeLists.txt  sudoku.cpp  sudoku.hpp
src/solver/: CMakeLists.txt  cell.cpp  cell.hpp  options.cpp  options.hpp  region.cpp  region.hpp  sudoku.cpp  sudoku.hpp  super_region.cpp  super_region.hpp
src/vision/: CMakeLists.txt  grid_detector.cpp  grid_detector.hpp  ocr.cpp  ocr.hpp  quad.cpp  quad.hpp  vision.cpp  vision.hpp
test/: CMakeLists.txt
test/common/: sudoku_test.cpp
test/solver/: cell_test.cpp  options_test.cpp  region_test.cpp  sudoku_test.cpp  super_region_test.cpp
